all controller done exept event and updates
