# swagger/fruits-specs/src/main/resources/api-spec.yaml
@@ -150,29 +150,6 @@ paths:
           schema:
             type: object
 
-  /pointScales/{pointScaleName}/{username}:
-    get:
-      tags:
-        - "pointScales"
-      description: return the points the user have
-      operationId: getPoints
-      parameters:
-        - $ref: '#/parameters/pointScaleName'
-        - $ref: '#/parameters/appKey'
-        - $ref: '#/parameters/username'
-      produces:
-        - application/json
-      responses:
-        '200':
-          description: success
-          schema:
-            type: integer
-        '404':
-          description: user not found
-          schema:
-            type: object
-
-
   /rules:
     get:
       tags:
@@ -287,7 +264,6 @@ paths:
           schema:
             type: object
 
-
   /users:
     get:
       tags:
@@ -322,6 +298,28 @@ paths:
           description: user returned
           schema:
             $ref: '#/definitions/User'
+
+  /users/{username}/{pointScaleName}:
+    get:
+      tags:
+        - "points"
+      description: return the points the user have
+      operationId: getPoints
+      parameters:
+        - $ref: '#/parameters/pointScaleName'
+        - $ref: '#/parameters/appKey'
+        - $ref: '#/parameters/username'
+      produces:
+        - application/json
+      responses:
+        '200':
+          description: success
+          schema:
+            type: integer
+        '404':
+          description: user not found
+          schema:
+            type: object
 
 parameters:
   badge:
